--- a/blog2.html
+++ b/blog2.html
@@ -2,57 +2,18 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="navbar.css">
-<link rel="stylesheet" type="text/css" href="footer.css">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Capturing daily life objects-Hardik Sharma</title>
+<link rel="icon" href="logos\favicon.png" type="image/x-icon">
+<link rel="stylesheet" type="text/css" media="(min-width:600px)" href="navbar.css">
+<link rel="stylesheet" type="text/css" media="(max-width:600px)" href="m_navbar.css">
+<link rel="stylesheet" type="text/css" media="(min-width:600px)" href="footer.css">
+<link rel="stylesheet" type="text/css" media="(max-width:600px)" href="m_footer.css">
+<link rel="stylesheet" type="text/css"  href="blog_style.css">
+
 <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&family=Raleway:wght@400;600;900&display=swap" rel="stylesheet">
-<style>
-body{
-font-family:Raleway;
-font-size:1.5vw;
 
-}
-.blog_heading{
-font-size:3vw;
-text-align:center;
-color:white;
-background-color:#040346;
-padding:0.1vh;
-margin-top:15vh;
-}
-
-.main_image{
-display:block;
-margin: 3vh auto;
-height:27vw;
-width:100%;
-object-fit:cover;
-}
-.quote{
-font-style:italic;
-font-size:2.5vw;
-font-family:Times New Roman;
-color:#434346;
-text-align:center;
-//background-color:#43434645;
-padding:1vw;
-width:60%;
-margin:auto;
-}
-.body_image
-{
-height:18vw;
-width:32vw;
-display:inline-block;
-float:left;
-margin:2vh 2vw;
-}
-.blog_list{
-font-weight:bold;
-text-decoration:underline
-
-
-}
-</style>
+<script src="nav_mobile.js"></script>
 </head>
 <body>
 <div id="navbar">
@@ -63,8 +24,22 @@ text-decoration:underline
 <a class="top" href="gallery.html">GALLERY</a>
 <a class="top" href="blog.html">BLOG</a>
 <a class="top" href="contact.html">CONTACT</a>
+<div class="outer" onclick="animate_ham()">
+	<div class="inner"></div>
+	<div class="inner"></div>
+	<div class="inner"></div>
+</div>
 </nav>
 </div>
+CSS RENDERING ... 
+<div id="m_navbar">
+	<a class="m_top" href="index.html">HOME</a>
+	<a class="m_top" href="about.html">ABOUT </a>
+	<a class="m_top" href="gallery.html">GALLERY</a>
+	<a class="m_top" href="blog.html">BLOG</a>
+	<a class="m_top" href="contact.html">CONTACT</a>
+</div>
+
 <div class="blog_heading">
 <h3>Capturing daily life objects</h3>
 </div>
@@ -112,17 +87,17 @@ So that was all for the tips. Do visit the contact page for any suggestions or f
 <footer id="foot">
 	<div class="socicon">
 		<a  href="https://www.instagram.com/hardiks_51/">
-		<img src="logos\instagram.jpg" height="3%" width="3%">
+		<img src="logos\instagram.jpg" >
 		</a>
 	</div>
 	<div class="socicon">
 		<a href="https://www.linkedin.com/in/hardik-sharma-a0682b196">
-			<img src="logos\linkedin.png" height="3%" width="3%">
+			<img src="logos\linkedin.png">
 		</a>
 	</div>
 	<div class="socicon">
 		<a href="mailto:hardik00051@gmail.com">
-			<img src="logos\mail.png" height="3%" width="3%">
+			<img src="logos\mail.png" >
 		</a>	
 	</div>
 	
