--- a/blog3.html
+++ b/blog3.html
@@ -2,50 +2,18 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="navbar.css">
-<link rel="stylesheet" type="text/css" href="footer.css">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Minimalism-the essence of life...-Hardik Sharma</title>
+<link rel="icon" href="logos\favicon.png" type="image/x-icon">
+<link rel="stylesheet" type="text/css" media="(min-width:600px)" href="navbar.css">
+<link rel="stylesheet" type="text/css" media="(max-width:600px)" href="m_navbar.css">
+<link rel="stylesheet" type="text/css" media="(min-width:600px)" href="footer.css">
+<link rel="stylesheet" type="text/css" media="(max-width:600px)" href="m_footer.css">
+<link rel="stylesheet" type="text/css"  href="blog_style.css">
+
 <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&family=Raleway:wght@400;600;900&display=swap" rel="stylesheet">
-<style>
-body{
-font-family:Raleway;
-font-size:1.5vw;
 
-}
-.blog_heading{
-font-size:3vw;
-text-align:center;
-color:white;
-background-color:#040346;
-padding:0.1vh;
-margin-top:15vh;
-}
-
-.main_image{
-display:block;
-margin: 3vh auto;
-height:27vw;
-width:100%;
-object-fit:cover;
-}
-.quote{
-font-style:italic;
-font-size:2.5vw;
-font-family:Times New Roman;
-color:#434346;
-text-align:center;
-//background-color:#43434645;
-padding:1vw;
-width:60%;
-margin:auto;
-}
-
-.blog_list{
-font-weight:bold;
-text-decoration:underline
-
-
-}
-</style>
+<script src="nav_mobile.js"></script>
 </head>
 <body>
 <div id="navbar">
@@ -56,8 +24,22 @@ text-decoration:underline
 <a class="top" href="gallery.html">GALLERY</a>
 <a class="top" href="blog.html">BLOG</a>
 <a class="top" href="contact.html">CONTACT</a>
+<div class="outer" onclick="animate_ham()">
+	<div class="inner"></div>
+	<div class="inner"></div>
+	<div class="inner"></div>
+</div>
 </nav>
 </div>
+CSS RENDERING ... 
+<div id="m_navbar">
+	<a class="m_top" href="index.html">HOME</a>
+	<a class="m_top" href="about.html">ABOUT </a>
+	<a class="m_top" href="gallery.html">GALLERY</a>
+	<a class="m_top" href="blog.html">BLOG</a>
+	<a class="m_top" href="contact.html">CONTACT</a>
+</div>
+
 <div class="blog_heading">
 <h3>Minimalism-the essence of life...</h3>
 </div>
@@ -65,7 +47,7 @@ text-decoration:underline
 <div class="blog_content">
 <img class="main_image" src="minimal.jpg">
 <div class="quote">"There are two ways to be rich: One is by acquiring much, and the other is by desiring little."</div>
-<div style="margin-left:70%;font-style:italic;font-weight:bold;">-Jackie French Koller</div><br>
+<div id="quote_cred">-Jackie French Koller</div><br>
 <p>
 Minimalism-the one word that defines design in the 21st century is one of the trending topics.Brands like Apple have used this concept quite successfully when it comes to connecting the user with the brand. Even in photography, this concept has vital role- this blog is not a "how-to" nor it is going to teach you that(I am too amateur for that); I've just put my thoughts on what it means to me and when I capture photos. 
 </p>
@@ -88,17 +70,17 @@ Explore inside, and let the balance and bliss happen!
 <footer id="foot">
 	<div class="socicon">
 		<a  href="https://www.instagram.com/hardiks_51/">
-		<img src="logos\instagram.jpg" height="3%" width="3%">
+		<img src="logos\instagram.jpg" >
 		</a>
 	</div>
 	<div class="socicon">
 		<a href="https://www.linkedin.com/in/hardik-sharma-a0682b196">
-			<img src="logos\linkedin.png" height="3%" width="3%">
+			<img src="logos\linkedin.png" >
 		</a>
 	</div>
 	<div class="socicon">
 		<a href="mailto:hardik00051@gmail.com">
-			<img src="logos\mail.png" height="3%" width="3%">
+			<img src="logos\mail.png" >
 		</a>	
 	</div>
 	
