--- a/gallery.html
+++ b/gallery.html
@@ -1,10 +1,20 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="navbar.css">
-<link rel="stylesheet" type="text/css" href="footer.css">
-<link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&family=Raleway:wght@400;600;900&display=swap" rel="stylesheet">
+<link rel="icon" href="logos\favicon.png" type="image/x-icon">
+<title>Gallery-Hardik Sharma</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" type="text/css" media="(min-width:600px)" href="navbar.css">
+<link rel="stylesheet" type="text/css" media="(max-width:600px)" href="m_navbar.css">
+<link rel="stylesheet" type="text/css" media="(min-width:600px)" href="footer.css">
+<link rel="stylesheet" type="text/css" media="(max-width:600px)" href="m_footer.css">
+
+<link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;900&family=Montserrat:wght@800;900&family=Open+Sans&family=Raleway:wght@200;300;400;500;700&display=swap" rel="stylesheet">
 <style>
+*
+{
+box-sizing:border-box;
+}
 
 .maingal
 {
@@ -56,14 +66,14 @@ background-size:130%;
 }
 .back_cover
 {
-height:20vw;
-width:30vw;
+height:inherit;
+width:inherit;
 background-color:none;
 margin:0 0;
 box-sizing:border-box;
 transition-property:background-color,color;
 transition-duration:1s;
-border:3px solid black;
+border:2px solid black;
 }
 .back_cover:hover{
 background-color:#00000094;
@@ -77,19 +87,55 @@ font-weight:bold;
 font-size:3vw;
 font-family:raleway;
 }
-h2{
-margin-top:13vh;
-margin-left:auto;
-margin-right:auto;
-margin-bottom:-5vh;
-text-align:center;
-font-family:;
+.content{
+box-sizing:border-box;
+margin:15vh auto;
+width:70%;
+text-align:justify;
+}
+.content > h2{
+font-weight:bolder;
 font-size:5vw;
+text-align:center;
+font-family:'Lato', sans-serif;
 text-decoration:underline;
-font-family:'Lato',sans-serif;
+}
+
+
+/*for mobile*/
+
+@media only screen and (max-width:600px)
+{
+	.content{
+	margin:10vh auto;
+	width:80vw;
+	}
+	.content  h2
+	{
+		font-size:5vh;
+	}
+	.maingal
+	{
+		height:60vh;
+		width:60vw;
+		margin:10vh auto;
+	
+	}
+	.galcon
+	{
+		height:20vh;
+		width:40vw;
+	
+	}
+	.title_gal{
+	
+		margin:8vh auto;
+		font-size:3vh;
+	}
 }
 </style>
-
+<script src="nav_mobile.js">
+</script>
 </head>
 <body>
 <div id="navbar">
@@ -100,9 +146,26 @@ font-family:'Lato',sans-serif;
 <a class="top" href="gallery.html">GALLERY</a>
 <a class="top" href="blog.html">BLOG</a>
 <a class="top" href="contact.html">CONTACT</a>
+<div class="outer" onclick="animate_ham()">
+	<div class="inner"></div>
+	<div class="inner"></div>
+	<div class="inner"></div>
+</div>
 </nav>
 </div>
-<h2>GALLERY</h2>
+CSS RENDERING ... 
+<div id="m_navbar">
+	<a class="m_top" href="index.html">HOME</a>
+	<a class="m_top" href="about.html">ABOUT </a>
+	<a class="m_top" href="gallery.html">GALLERY</a>
+	<a class="m_top" href="blog.html">BLOG</a>
+	<a class="m_top" href="contact.html">CONTACT</a>
+</div>
+
+<div class="content">
+
+	<h2>GALLERY</h2>
+</div>
 
 <div class="maingal">
 <a href="nature.html">
@@ -148,17 +211,17 @@ font-family:'Lato',sans-serif;
 <footer id="foot">
 	<div class="socicon">
 		<a  href="https://www.instagram.com/hardiks_51/">
-		<img src="logos\instagram.jpg" height="3%" width="3%">
+		<img src="logos\instagram.jpg" >
 		</a>
 	</div>
 	<div class="socicon">
 		<a href="https://www.linkedin.com/in/hardik-sharma-a0682b196">
-			<img src="logos\linkedin.png" height="3%" width="3%">
+			<img src="logos\linkedin.png"  >
 		</a>
 	</div>
 	<div class="socicon">
 		<a href="mailto:hardik00051@gmail.com">
-			<img src="logos\mail.png" height="3%" width="3%">
+			<img src="logos\mail.png" >
 		</a>	
 	</div>
 	
