--- a/contact.html
+++ b/contact.html
@@ -170,9 +170,13 @@ font-size:2.5vh;
 .main_form
 {
 width:80vw;
-height:60vh;
+height:65vh;
 
 
+}
+.field
+{
+	margin-left:3vw;
 }
 .field_name{
 	
@@ -195,7 +199,7 @@ height:60vh;
 }
 .field textarea
 {
-	margin-left:5vw;
+	margin-left:4vw;
 	height:15vh;
 	width:40vw;
 	font-size:3vw;
